@@ -1,14 +1,15 @@
 #!/bin/bash
 
 # This script can be executed after installing the package
-if test ! -r ../../../PREFIX ; then
-	echo "Could not locate prefix installation"
-	exit -1
-fi
+#if test ! -r ../../../PREFIX ; then
+#	echo "Could not locate prefix installation"
+#	exit -1
+#fi
 
 rm -fr TRACE.sym TRACE.mpits set-0
 
-export EXTRAE_HOME=`cat ../../../PREFIX`
+#export EXTRAE_HOME=`cat ../../../PREFIX`
+export EXTRAE_HOME=$(top_builddir)
 
 if test ! -x ${EXTRAE_HOME}/bin/extrae ; then
 	echo "Could not execute binary rewriter test because ${EXTRAE_HOME}/bin/extrae has not been installed. Run make install first."
